# openwebui-wsl2-starter

./: .PSScriptAnalyzerSettings.psd1  .gitattributes  .gitignore  .golangci.yml  .shellcheckrc  CLAUDE.md  CODEOWNERS.md  LICENSE  Makefile  README.md  RUNME.cmd  RUNME.ps1  RUNME.sh  Setup-OpenWebUI.ps1  bootstrap.sh  build_and_test.cmd  build_and_test.sh  config.sh  config.toml  go.mod  pyproject.toml  update_open-webui.config.sh  update_open-webui.sh
.github/workflows/: ci.yml  go.yml
bash/common/: repo_env.sh  repo_lib.sh
bash/tests/: test_run_command.sh
cmd/ow/: config_cmd.go  containers_cmd.go  containers_cmd_test.go  diagnose_cmd.go  diagnose_cmd_test.go  diagnose_windows.go  diagnose_windows_test.go  integration_test.go  integration_windows_test.go  main.go  ollama_cmd.go  ollama_cmd_test.go  proxy_cmd.go  proxy_cmd_test.go  root.go  setup_cmd.go  setup_cmd_test.go  setup_windows.go  setup_windows_test.go  wsl_cmd.go  wsl_cmd_test.go
docs/: cli-design.md  design.md  milestone-1-plan.md  requirements.md
internal/apt/: keyring.go  keyring_test.go  packages.go  packages_test.go
owui/: __init__.py  cli.py  config.py  diagnostics.py  docker.py  log.py  ollama.py  openwebui.py  retry.py  system.py
powershell/: CommonLibrary.psm1  Install-Ubuntu.ps1  Remove-NetShBindings.ps1  Remove-Ubuntu.ps1  Update-Wsl2.ps1
tests/: conftest.py  test_cli.py  test_config.py  test_diagnostics.py  test_docker.py  test_log.py  test_ollama.py  test_openwebui.py  test_retry.py  test_system.py
wsl/: Install-Ubuntu.ps1  Remove-Ubuntu.ps1  Update-Wsl2.ps1  WslCommon.psm1
(+43 files in other folders)
