[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "owui"
version = "0.1.0"
description = "OpenWebUI + Ollama setup automation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
owui = "owui.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
