[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owui"
version = "0.1.0"
description = "OpenWebUI + Ollama setup automation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
owui = "owui.cli:main"

[tool.setuptools.packages.find]
include = ["owui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
